# elastic-nerf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  initialize.sh  pixi.toml  pyproject.toml  settings.ini  setup.cfg
docker/: elastic-nerf.Dockerfile
docs/: about.html  index.html  search.json  styles.css
docs/documentation/: index.html
docs/experiments/: index.html
elastic_nerf/configs/: hosts.py
elastic_nerf/modules/: elastic_mlp.py  elastic_nerfacto_field.py
elastic_nerf/nerfacc/: utils.py
elastic_nerf/nerfstudio/: elastic_nerfacto.py  elastic_pipeline.py  elastic_trainer.py
elastic_nerf/utils/: dataset_utils.py  eval_utils.py  logging_utils.py  notebook_utils.py  plotting_utils.py  results_utils.py  wandb_utils.py
publish/: about.qmd  index.qmd
publish/documentation/: index.qmd
publish/experiments/: index.qmd
publish/logs/: index.qmd
publish/reports/: index.qmd
scripts/envs/: setup_conda_env.sh
scripts/eval/: download_results.py  eval_coord_check.py  eval_mlp_nerf.py  eval_model_sizes.py  explore_initializations.py  explore_mup.py  explore_sweep_results_mup.ipynb  explore_training_dynamics.py  rm_sweep_results.py  training_dynamics_analyzer.py  validate_elastic_sizes.py  validate_tcnn.py
scripts/sweeps/: run_wandb_sweep_conda.sh
scripts/train/: train_elastic_ngp_occ.py  train_elastic_ngp_prop.py  train_elastic_vanilla_nerf.py  train_granular_ngp_occ.py  train_granular_ngp_prop.py  train_mlp_nerf.py  train_mlp_tnerf.py  train_ngp_nerf_occ.py  train_ngp_nerf_prop.py  trainer.py
(+92 files in other folders)
