[metadata]
name = elastic-nerf
version = 0.1.0
description = Elastic Neural Radiance Fields.
author = Saeejith Nair
author_email = saeejithn@gmail.com

[options]
python_requires = ~=3.9.0
packages = find_packages()
install_requires =
    # List your package dependencies here
    # e.g., "numpy>=1.18.5"

[classifiers]
Programming Language :: Python :: 3

# [mypy]
# mypy_path = stubs
